--- a/motions.cabal
+++ b/motions.cabal
@@ -22,6 +22,7 @@ library
                        Bio.Motions.Callback.Class,
                        Bio.Motions.Callback.StandardScore,
                        Bio.Motions.Callback.Parser.Parser,
+                       Bio.Motions.Callback.Parser.TH,
                        Bio.Motions.Types
                        Bio.Motions.Engine
   -- other-modules:       
@@ -35,6 +36,8 @@ library
                        mtl >=2.2 && <2.3,
                        containers >=0.5 && <0.6,
                        transformers >=0.4 && <0.5,
-                       parsec >=3.1 && <3.2
+                       parsec >=3.1 && <3.2,
+                       template-haskell >=2.10 && <2.11,
+                       ghc-prim >=0.4 && <0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
