--- a/motions.cabal
+++ b/motions.cabal
@@ -41,3 +41,9 @@ library
                        ghc-prim >=0.4 && <0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable sample
+    main-is:           Sample.hs
+    build-depends:     base >=4.8 && <4.9,
+                       motions
+    default-language:  Haskell2010
