--- a/motions.cabal
+++ b/motions.cabal
@@ -38,7 +38,8 @@ library
                        transformers >=0.4 && <0.5,
                        parsec >=3.1 && <3.2,
                        template-haskell >=2.10 && <2.11,
-                       ghc-prim >=0.4 && <0.5
+                       ghc-prim >=0.4 && <0.5,
+                       constraints >=0.6 && <0.7
   hs-source-dirs:      src
   default-language:    Haskell2010
 
