--- a/motions.cabal
+++ b/motions.cabal
@@ -39,7 +39,9 @@ library
                        parsec >=3.1 && <3.2,
                        template-haskell >=2.10 && <2.11,
                        ghc-prim >=0.4 && <0.5,
-                       constraints >=0.6 && <0.7
+                       constraints >=0.6 && <0.7,
+                       reflection >=2.1 && <2.2,
+                       ghc-typelits-natnormalise >=0.3 && <0.4
   hs-source-dirs:      src
   default-language:    Haskell2010
 
