--- a/motions.cabal
+++ b/motions.cabal
@@ -48,3 +48,16 @@ executable sample
     build-depends:     base >=4.8 && <4.9,
                        motions
     default-language:  Haskell2010
+
+test-suite basic-tests
+    type:              exitcode-stdio-1.0
+    main-is:           BasicTests.hs
+    build-depends:     motions,
+                       base >=4.8 && <4.9,
+                       hspec >=2.2 && <2.3,
+                       QuickCheck >=2.8 && <2.9,
+                       linear >=1.20 && <1.21,
+                       vector >=0.11 && <0.12,
+                       mono-traversable >=0.10 && <0.11
+    default-language:  Haskell2010
+    hs-source-dirs:    test
